--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 .DS_Store
 .vscode
+.idea/
+
+# Binaries for programs and plugins
+*.exe
+*.dll
+*.so
+*.dylib
+
+# Test binary, build with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
